# my.gorishok

./: .gitignore  manage.py  pyproject.toml
apps/auth/: models.py
apps/cart/: models.py  urls.py  views.py
apps/cart/migrations/: 0001_initial.py
apps/product_catalog/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
apps/product_catalog/migrations/: 0001_initial.py  0002_product_image.py  0003_remove_product_quantity.py  0004_image_imageassociation_country_images.py  0005_remove_country_images_remove_product_image_and_more.py  0006_rename_model_imageassociation_product.py  0007_category_slug.py  0008_category_image.py  0009_discount_category_created_at_category_modified_at_and_more.py
apps/user_management/: admin.py  forms.py  managers.py  middleware.py  models.py  tests.py  urls.py  utils.py  views.py
apps/user_management/migrations/: 0001_initial.py  0002_address_user_created_at_user_modified_at_and_more.py  0002_alter_user_email.py  0003_address_user_created_at_user_modified_at_and_more.py  0003_user_is_guest.py  0004_alter_user_address.py
apps/user_management/templates/: create_user.html  delete_user.html  update_user.html  (+1 more)
my_gorishok/: asgi.py  settings.py  urls.py  wsgi.py
product_catalog/: views.py
static/js/: add_to_cart.js  cookie.js  popup.js  remove_from_cart.js
templates/: _base.html  homepage.html  shop_item.html
templates/account/: email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  signup.html
templates/product_catalog/: homepage.html  shop_item.html
(+8 files in other folders)
